fix buttonlink alignment

--- a/ui/components/component-library/button-link/button-link.scss
+++ b/ui/components/component-library/button-link/button-link.scss
@@ -43,6 +43,7 @@
     font-size: inherit;
     line-height: inherit;
     letter-spacing: inherit;
+    padding: 0;
   }
 
   &--size-inherit:hover:not(&--disabled) {
